# gc

./: CMakeLists.txt  LICENSE  README.md
mark-and-compact/: CMakeLists.txt  gc.c  gc.h  misc.c  misc.h  test.c
mark-and-sweep/: CMakeLists.txt  gc_ms.c  gc_ms.h  makefile  ms_test.c
mark-not-sweep/: gc_mns.c  gc_mns.h  makefile
mark_and_sweep/: gc_ms.h  makefile  ms_test.c
mark_not_sweep/: CMakeLists.txt  mns_test.c
